Fixed New Entry button display.
Added class to bloglist.tpl and css to style.css
to prevent the new entry button from being squashed and not displaying on one line.

Bug#874002

--- a/htdocs/artefact/blog/theme/raw/static/style/style.css
+++ b/htdocs/artefact/blog/theme/raw/static/style/style.css
@@ -30,6 +30,11 @@ td a.btn-add{
 	margin-left:10px;
 	margin-right:10px;
 }
+
+td a.btn {
+    white-space: nowrap;
+}
+
 /* Post list */
 #postlist th {
 	border-bottom: 1px dotted #d1d1d1;
